# EuroMeasure-py

./: README.md  pyproject.toml
src/euromeasure/: __init__.py  euromeasure.py
